Adding More Jekyll

--- a/AREYOUCEREAL.github.io/css/main.scss
+++ b/AREYOUCEREAL.github.io/css/main.scss
@@ -28,7 +28,7 @@ a {
   color: #FF3300;
   text-decoration: none; }
   a:visited {
-    color: #1756a9; }
+    color: #ffa500; }
   a:hover {
     color: #111;
     text-decoration: underline; }
